--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/wwwroot/css/site.css
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/wwwroot/css/site.css
@@ -56,7 +56,7 @@ img.iiifpreview {
 }
 
 td.adjunct {
-    background-color: #fff!important;
+    padding-left: 1em!important;
     font-size: small;
 }
 
