--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -52,6 +52,14 @@
             <strong>@((int)TempData["orphans-deleted"]) Orphans deleted!</strong>
         </div>
     }
+    
+    @if (TempData["no-work-synchronisation"] != null)
+    {
+        <div class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <strong>Could not fully sync all DDS metadata:</strong> @TempData["no-work-synchronisation"])
+        </div>
+    }
 
     @if (Model.SyncOperation.Orphans.Any())
     {
@@ -167,7 +175,7 @@
 
         @*<h3><span class="glyphicon glyphicon-info-sign"></span> Details</h3>*@<div class="panel panel-primary">
             <div class="panel-heading">
-                @metsManifestation.Type (@metsManifestation.FirstSignificantInternetType)
+                @metsManifestation.Type (@metsManifestation.FirstInternetType)
             </div>
             <ul class="list-group">
                 <li class="list-group-item">
@@ -346,7 +354,7 @@
                         <small><em>No cached package on disk yet</em></small>
                     }
                 </li>
-                @if (metsManifestation.SignificantSequence.Any(pf => pf.RelativeAltoPath.HasText()))
+                @if (metsManifestation.Sequence.Any(pf => pf.RelativeAltoPath.HasText()))
                 {
                     <li class="list-group-item">
                         <a class="wip" href="@Url.Action("CacheBustAlto", "Dash", new {id = Model.DdsIdentifier})"><span class="glyphicon glyphicon-refresh"></span> Rebuild search</a><br />
@@ -371,7 +379,7 @@
                 }
             </ul>
         </div>
-        @if (metsManifestation.FirstSignificantInternetType == "image/jp2")
+        @if (metsManifestation.FirstInternetType == "image/jp2")
         {
             <h3>PDF</h3>
             if (pdf == null)
@@ -446,9 +454,9 @@
     <div class="col-md-9">
         <h4 style="margin-top: 0;">
             @Html.Raw(Model.GetAssetGlyph())
-            @metsManifestation.SignificantSequence.Count
+            @metsManifestation.Sequence.Count
             assets of type
-            @metsManifestation.FirstSignificantInternetType
+            @metsManifestation.FirstInternetType
         </h4>
 
 
@@ -493,7 +501,7 @@
                 @foreach (IPhysicalFile pf in metsManifestation.Sequence)
                 {
                     var dlcsImage = Model.GetDlcsImage(pf.StorageIdentifier);
-                    bool ignored = Model.IsIgnored(pf.StorageIdentifier);
+                    bool ignored = false; // The physical file itself is never ignored.
                     <tr class="@Model.GetCssClassForImageRow(dlcsImage, ignored)" id="@Model.GetTableId(pf.StorageIdentifier)">
                         <td>@pf.Order</td>
                         @if (Model.ManifestationFamily == AssetFamily.Image)
