Align packages with aspnetcore5, allows some db extensions for raw sql

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Index.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Index.cshtml
@@ -22,7 +22,13 @@
 
 <h2>Recently Digitised</h2>
 
-<p>@Html.ActionLink("View Goobi Calls", "Recent", "GoobiCall") | @Html.ActionLink("View Job Processor log", "Index", "Log")</p>
+<p>
+    @Html.ActionLink("View recent workflow (Goobi calls)", "Recent", "GoobiCall")
+    | 
+    @Html.ActionLink("View Job Processor log", "Index", "Log")
+    |
+    @Html.ActionLink("Recent user activity", "RecentActions", "Dash")
+</p>
 <p>This is a list of <i>new</i> bNumbers. It does not include reprocessed bNumbers.</p>
 
 <div class="row">
