--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
@@ -33,11 +33,11 @@
                     <li>
                         <a asp-controller="Account" asp-action="UserPage" title="@User.Identity.Name"><span class="glyphicon glyphicon-user"></span></a>
                     </li>
-                    <li>@Html.ActionLink("Activity", "RecentActions", "Dash")</li>
+                    <li>@Html.ActionLink("Workflow", "Stats", "GoobiCall")</li>
                     <li>@Html.ActionLink("Jobs", "Recent", "Job")</li>
                     <li>@Html.ActionLink("Queue", "Queue", "Dash")</li>
                     <li>@Html.ActionLink("Status", "Status", "Dash")</li>
-                    <li>@Html.ActionLink("Types", "AssetType", "Dash", null, new { @class = "wip"})</li>
+                    <li>@Html.ActionLink("Types", "AssetType", "Dash", null)</li>
                     <li class="@ViewBag.StopClass">@Html.ActionLink("Stop", "StopStatus", new { controller = "Dash" }, new { @class = ViewBag.StopClass })</li>
                 </ul>
                 <p class="nav navbar-text @ViewBag.HeartbeatClass" title="@heartBeatDisplay">
