Archives top level collection

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/GoobiCall/GoobiCall.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/GoobiCall/GoobiCall.cshtml
@@ -81,7 +81,7 @@ else
             </tr>
             <tr>
                 <td>Job options</td>
-                <td>@String.Join("<br/>",((RunnerOptionsFlags)Model.WorkflowOptions.GetValueOrDefault()).ToString().Split(','))</td>
+                <td>@Html.Raw(String.Join("<br/>",((RunnerOptionsFlags)Model.WorkflowOptions.GetValueOrDefault()).ToString().Split(',')))</td>
             </tr>
             <tr>
                 <td>First DLCS Job ID</td>
