--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/GoobiCall/Stats.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/GoobiCall/Stats.cshtml
@@ -37,7 +37,7 @@
                      aria-valuenow='@($"{Model.FinishedJobs}")'
                      aria-valuemin="0"
                      aria-valuemax='@($"{Model.TotalJobs}")' 
-                     style="width: @($"{Model.FinishedPercent:P2}");">
+                     style="width: @($"{Model.FinishedPercent*100}")%;">
                     <span class="sr-only">@($"{Model.FinishedPercent:P2}") Complete</span>
                 </div>
             </div>
