--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/UV.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/UV.cshtml
@@ -7,10 +7,11 @@
 <div class="row" style="margin-top: 1.5em;">
     <div class="col-sm-12">
         <a href="#" onclick="window.history.go(-1); return false;">Back to previous page</a>
+        <p>Viewing manifest <a href="@Model">@Model</a></p>
     </div>
 </div>
 
 <div style="margin-top: 2em;">
-    <div class="uv" data-config="https://wellcomelibrary.org/assets/config/uv-config.json" data-uri=@(Model + "?ts=" + DateTime.Now.Ticks) style="width: 100%; height:700px; background-color: #000"></div>
+    <div class="uv" data-config="https://wellcomelibrary.org/assets/config/uv-config.json" data-uri="@Model" style="width: 100%; height:700px; background-color: #000"></div>
     <script type="text/javascript" id="embedUV" src="https://wellcomelibrary.org/spas/uv/top/lib/embed.js"></script>
 </div>
