--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Home/Index.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Wellcome.Dds.AssetDomain.Mets
 @using Utils
 
-@model Wellcome.Dds.Dashboard.Models.TestModel
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,61 +14,6 @@
     </style>
 </head>
 <body>
-    <p>Hello from Wellcome.Dds.Dashboard! This demo only works for image-based resources. For now.</p>
-    @if (Model.Message != null)
-    {
-        <p>@Model.Message</p>
-    }
-    else
-    {
-        <h2>@Model.Manifestation.MetsManifestation.Label</h2>
-
-        
-        <table cellpadding="5">
-            <thead>
-                <tr>
-                    <th>Order</th>
-                    <th>Label</th>
-                    <th>Dimensions</th>
-                    <th>Access</th>
-                    <th>ALTO</th>
-                    <th>DLCS</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-
-                @foreach (IPhysicalFile pf in Model.Manifestation.MetsManifestation.Sequence)
-                {
-                    var dlcsImage = Model.GetDlcsImage(pf.StorageIdentifier);
-                    <tr>
-                        <td>@pf.Order</td>
-                            <td>@pf.OrderLabel</td>
-                            <td>@pf.AssetMetadata.GetImageWidth() x @pf.AssetMetadata.GetImageHeight()</td>
-                            <td>@pf.AccessCondition</td>
-                            <td>@pf.RelativeAltoPath</td>
-                        @{
-                            if (dlcsImage != null)
-                            {
-                                <td>
-                                    <a href="@Model.GetPortalPageForImage(dlcsImage)">@pf.StorageIdentifier</a>
-                                </td>
-                            }
-                            else
-                            {
-                                <td>@pf.StorageIdentifier</td>
-                            }
-                        }
-                        <td>
-                            @{
-                                var thumb24 = Model.GetThumbnail(dlcsImage, 24);
-                            }
-                                <img width="@thumb24.Width" height="@thumb24.Height" src="@thumb24.Src" />
-                        </td>
-                    </tr>
-                                }
-            </tbody>
-        </table>
-                                }
-    </body>
+<p>Superseded</p>
+</body>
 </html>
