--- a/src/Wellcome.Dds/Wellcome.Dds.Server/wwwroot/assets/css/blog.css
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/wwwroot/assets/css/blog.css
@@ -250,7 +250,7 @@ img[class*="wp-image-"] {
 height: auto; /* Make sure images with WordPress-added height and width attributes are scaled correctly */
 }
 img.size-full {
-max-width: 100%%;
+max-width: 100%;
 width: auto; /* Prevent stretching of full-size images with height and width attributes in IE8 */
 }
 
