--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -25,7 +25,7 @@
         {
             <div class="alert alert-danger alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <strong>Failed to queue workflow job!</strong> @refreshResult.Message)
+                <strong>Failed to queue workflow job!</strong> @refreshResult.Message
             </div>
         }
     }
@@ -43,7 +43,7 @@
         {
             <div class="alert alert-danger alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <strong>Failed to queue workflow job!</strong> @refreshResult.Message)
+                <strong>Failed to queue workflow job!</strong> @refreshResult.Message
             </div>
         }
     }
