--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/GoobiCall/GoobiCallList.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/GoobiCall/GoobiCallList.cshtml
@@ -8,6 +8,14 @@
 
 
 <div class="col-md-12">
+    @if (TempData["reset-errors"] != null)
+    {
+        <p></p>
+        <div class="alert alert-success alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <strong>@TempData["reset-errors"]</strong>
+        </div>
+    }
     <h3 style="margin: 25px 0 20px 0">Recent Goobi calls</h3>
 </div>
 
