--- a/src/AuthTest/AuthTest/Views/Home/Index.cshtml
+++ b/src/AuthTest/AuthTest/Views/Home/Index.cshtml
@@ -1,12 +1,13 @@
-﻿@{
+﻿@model AuthTest.ViewModels.HomeViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="row">
     <div class="col-md-12">
 
-        <h3>Claims associated with current User</h3>
-        <p>This page displays all the claims associated the the current User. This is useful when debugging to see which claims are being populated from the Auth0 ID Token.</p>
+        <h3>Current User</h3>
+        <p>This page displays claims associated to the current User, including mapped DLCS role.</p>
 
         <table class="table">
             <thead>
@@ -20,13 +21,32 @@
             </tr>
             </thead>
             <tbody>
-            @foreach (var claim in User.Claims)
-            {
-                <tr>
-                    <td>@claim.Type</td>
-                    <td>@claim.Value</td>
-                </tr>
-            }
+            <tr>
+                <td>Identifier</td>
+                <td>@Model.Identifier</td>
+            </tr>
+            <tr>
+                <td>Email Address</td>
+                <td>@Model.EmailAddress</td>
+            </tr>
+            <tr>
+                <td>Nickname</td>
+                <td>@Model.Nickname</td>
+            </tr>
+            <tr>
+                <td>Role</td>
+                <td>@Model.Role</td>
+            </tr>
+            <tr>
+                <td>Mapped DLCS Role(s)</td>
+                <td>
+                    @foreach (var role in Model.DLCSRoles)
+                    {
+                        @role<br/>
+                    }
+
+                </td>
+            </tr>
             </tbody>
         </table>
     </div>
