--- a/src/AuthTest/AuthTest/Views/Shared/_Layout.cshtml
+++ b/src/AuthTest/AuthTest/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Mappings">Role Mappings</a>
+                    </li>
                 </ul>
             </div>
         </div>
