--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -98,7 +98,11 @@
     }
 
     <div class="col-md-9">
-        <h3 style="margin-top: 13px;">@Model.DigitisedManifestation.Identifier - @metsManifestation.Label</h3>
+        <h3 style="margin-top: 13px;">@Model.DigitisedManifestation.Identifier 
+            @if (metsManifestation.Label != Model.DigitisedManifestation.Identifier)
+            {
+                @metsManifestation.Label   
+            }</h3>
     </div>
     <div class="col-md-3">
         @if (Model.IsStandardMultipleManifestation)
@@ -145,7 +149,7 @@
                         <p><a href="#" onclick="location.reload(); return false;" class="btn btn-primary"><span class="glyphicon glyphicon-refresh"></span> Refresh</a></p>
                         if (latest.Submitted < DateTime.Now.AddMinutes(-10))
                         {
-                            <p><a href="@Url.Action("Resubmit", "Job", new {id = Model.DdsIdentifier})" class="btn btn-info"><span class="glyphicon glyphicon-transfer"></span> Resubmit*</a></p>
+                            <p><a href="@Url.Action("Resubmit", "Job", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})" class="btn btn-info"><span class="glyphicon glyphicon-transfer"></span> Resubmit*</a></p>
                         }
                     }
                 </div>
@@ -177,7 +181,7 @@
                             }
                         </tbody>
                     </table>
-                    <a href="@Url.Action("Sync", "Job", new {id = Model.DdsIdentifier})" class="btn btn-info"><span class="glyphicon glyphicon-transfer"></span> Sync</a>
+                    <a href="@Url.Action("Sync", "Job", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})" class="btn btn-info"><span class="glyphicon glyphicon-transfer"></span> Sync</a>
                 </div>
             </div>
         }
@@ -190,11 +194,11 @@
                 <li class="list-group-item">
                     <ul class="list-unstyled">
                         <li><a href="@Model.WorkPage">Work page</a></li>
-                        <li>@Html.ActionLink("View v2 in Library UV", "UV", "Dash", new {id = @Model.DdsIdentifier, version=2}, new {target="_blank"}) </li>
-                        <li>@Html.ActionLink("View v2 in Mirador", "Mirador", "Dash", new {id = @Model.DdsIdentifier, version=2}, new {target="_blank"}) </li>
-                        <li>@Html.ActionLink("View v3 in current UV", "UV", "Dash", new {id = @Model.DdsIdentifier, version=3}, new {target="_blank"}) </li>
-                        <li>@Html.ActionLink("View v3 in Mirador", "Mirador", "Dash", new {id = @Model.DdsIdentifier, version=3}, new {target="_blank"}) </li>
-                        <li>@Html.ActionLink("IIIF Validator", "Validator", "Dash", new {id = @Model.DdsIdentifier}, new {target="_blank"}) </li>
+                        <li>@Html.ActionLink("View v2 in Library UV", "UV", "Dash", new {id = @Model.DdsIdentifier.PackageIdentifierPathElementSafe, version=2}, new {target="_blank"}) </li>
+                        <li>@Html.ActionLink("View v2 in Mirador", "Mirador", "Dash", new {id = @Model.DdsIdentifier.PackageIdentifierPathElementSafe, version=2}, new {target="_blank"}) </li>
+                        <li>@Html.ActionLink("View v3 in current UV", "UV", "Dash", new {id = @Model.DdsIdentifier.PackageIdentifierPathElementSafe, version=3}, new {target="_blank"}) </li>
+                        <li>@Html.ActionLink("View v3 in Mirador", "Mirador", "Dash", new {id = @Model.DdsIdentifier.PackageIdentifierPathElementSafe, version=3}, new {target="_blank"}) </li>
+                        <li>@Html.ActionLink("IIIF Validator", "Validator", "Dash", new {id = @Model.DdsIdentifier.PackageIdentifierPathElementSafe}, new {target="_blank"}) </li>
                     </ul>
                 </li>
                 <li class="list-group-item">
@@ -207,7 +211,7 @@
                     <ul class="list-unstyled">
                         <li><a href="@Model.DlcsSkeletonManifest">DLCS Preview Manifest</a></li>
                         <li><a href="http://universalviewer.io/uv.html?manifest=@Model.DlcsSkeletonManifest">DLCS Preview Manifest in UV</a></li>
-                        <li><a href="@Url.Action("IIIF", "Peek", new {id = Model.DdsIdentifier})">IIIF Manifest (preview)</a></li>
+                        <li><a href="@Url.Action("IIIF", "Peek", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})">IIIF Manifest (preview)</a></li>
                         <li><a href="@Model.ManifestUrl">IIIF Manifest (live)</a></li>
                     </ul>
                 </li>
@@ -234,30 +238,33 @@
                 </li>
                 <li class="list-group-item">
                     <ul class="list-unstyled">
-                        <li><a href="@Url.Action("StorageManifest", "Peek", new {id = Model.DdsIdentifier.PackageIdentifier})"><span class="glyphicon glyphicon-file"></span> Storage Manifest</a></li>
-                        <li><a href="@Url.Action("StorageMap", "Dash", new { id = Model.DdsIdentifier.PackageIdentifier })"><span class="glyphicon glyphicon-tags"></span> Storage Map (versions)</a></li>
+                        <li><a href="@Url.Action("StorageManifest", "Peek", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})"><span class="glyphicon glyphicon-file"></span> Storage Manifest</a></li>
+                        <li><a href="@Url.Action("StorageMap", "Dash", new { id = Model.DdsIdentifier.PackageIdentifierPathElementSafe })"><span class="glyphicon glyphicon-tags"></span> Storage Map (versions)</a></li>
                         @{
                             var sourceFile = ((IFileBasedResource)metsManifestation).SourceFile;
                         }
-                        <li><a href="@Url.Action("XmlView", "Peek", new {id = Model.DdsIdentifier.PackageIdentifier, parts = sourceFile.RelativePath})"><span class="glyphicon glyphicon-file"></span> METS file</a></li>
+                        <li><a href="@Url.Action("XmlView", "Peek", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe, parts = sourceFile.RelativePath})"><span class="glyphicon glyphicon-file"></span> METS file</a></li>
                     </ul>
                 </li>
-                <li class="list-group-item">
-                    <ul class="list-unstyled">
-                        <li>
-                            Mods:
-                            <span title="accessCondition" class="label label-primary">@metsManifestation.ModsData.AccessCondition</span>
-                            <span title="leader6" class="label label-primary">@metsManifestation.ModsData.Leader6</span>
-                        </li>
-                    </ul>
-                </li>
+                @if (metsManifestation.ModsData != null)
+                {
+                    <li class="list-group-item">
+                        <ul class="list-unstyled">
+                            <li>
+                                Mods:
+                                <span title="accessCondition" class="label label-primary">@metsManifestation.ModsData.AccessCondition</span>
+                                <span title="leader6" class="label label-primary">@metsManifestation.ModsData.Leader6</span>
+                            </li>
+                        </ul>
+                    </li>
+                }
                 @if (metsManifestation.Sequence.HasItems())
                 {
                     if (metsManifestation.Sequence[0].GetStoredFileInfo().Uri.Contains("archive-storage"))
                     {
                         <li class="list-group-item">
                             <span class="glyphicon glyphicon-flash"></span>
-                            <text>@Html.ActionLink("Wellcome archive storage", "StorageManifest", "Peek", new { id = Model.DdsIdentifier.PackageIdentifier }, new { })</text>
+                            <text>@Html.ActionLink("Wellcome archive storage", "StorageManifest", "Peek", new { id = Model.DdsIdentifier.PackageIdentifierPathElementSafe }, new { })</text>
                         </li>
                     }
                 }
@@ -300,10 +307,10 @@
     <h3>Jobs</h3>
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="@Url.Action("GoobiCall", "GoobiCall", new {id = Model.DdsIdentifier.PackageIdentifier})"><span class="glyphicon glyphicon-info-sign"></span> Goobi Call Info</a>
+            <a href="@Url.Action("GoobiCall", "GoobiCall", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})"><span class="glyphicon glyphicon-info-sign"></span> Goobi Call Info</a>
         </li>    
         <li class="list-group-item">
-            <a href="@Url.Action("Create", "GoobiCall", new {id = Model.DdsIdentifier.PackageIdentifier})"><span class="glyphicon glyphicon-bullhorn"></span> Simulate Goobi Call</a>
+            <a href="@Url.Action("Create", "GoobiCall", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})"><span class="glyphicon glyphicon-bullhorn"></span> Simulate Goobi Call</a>
         </li>
         @foreach (var job in Model.IngestJobs)
         {
@@ -324,13 +331,13 @@
         @if (!Model.SyncOperation.RequiresSync && Model.IngestJobs.Count > 1 && !Model.IsRunning)
         {
             <li class="list-group-item">
-                <a href="@Url.Action("CleanOldJobs", "Job", new {id = Model.DdsIdentifier})"><span class="glyphicon glyphicon-trash"></span> Clean up old jobs</a>
+                <a href="@Url.Action("CleanOldJobs", "Job", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})"><span class="glyphicon glyphicon-trash"></span> Clean up old jobs</a>
             </li>
         }
         @if (!Model.IsRunning && !Model.SyncOperation.RequiresSync)
         {
             <li class="list-group-item">
-                <a href="@Url.Action("ForceReingest", "Job", new {id = Model.DdsIdentifier})"><span class="glyphicon glyphicon-transfer"></span> Force Reingest</a>
+                <a href="@Url.Action("ForceReingest", "Job", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})"><span class="glyphicon glyphicon-transfer"></span> Force Reingest</a>
             </li>
         }
     </ul>
@@ -342,10 +349,10 @@
             <h3>Multiples</h3>
             <ul class="list-group">
                 <li class="list-group-item">
-                    <a href="@Url.Action("SyncAllManifestations", "Job", new {id = Model.DdsIdentifier.PackageIdentifier})"><span class="glyphicon glyphicon-duplicate"></span> Sync all @Model.Siblings.Count manifestations</a>
+                    <a href="@Url.Action("SyncAllManifestations", "Job", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})"><span class="glyphicon glyphicon-duplicate"></span> Sync all @Model.Siblings.Count manifestations</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="@Url.Action("ForceReingestAllManifestations", "Job", new {id = Model.DdsIdentifier.PackageIdentifier})"><span class="glyphicon glyphicon-duplicate"></span> Reingest all @Model.Siblings.Count manifestations</a>
+                    <a href="@Url.Action("ForceReingestAllManifestations", "Job", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})"><span class="glyphicon glyphicon-duplicate"></span> Reingest all @Model.Siblings.Count manifestations</a>
                 </li>
             </ul>
         }
@@ -355,7 +362,7 @@
 
             <ul class="list-group">
                 <li class="list-group-item">
-                    @using (Html.BeginForm("RefreshIIIF", "WorkflowJob", new {id = Model.DdsIdentifier}, FormMethod.Post))
+                    @using (Html.BeginForm("RefreshIIIF", "WorkflowJob", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe}, FormMethod.Post))
                     {
                         <button type="submit" class="btn btn-link" title="Refresh Manifestations and IIIF">
                             <span class="glyphicon glyphicon-refresh"></span> Rebuild IIIF
@@ -373,7 +380,7 @@
                 @if (metsManifestation.Sequence.Any(pf => pf.RelativeAltoPath.HasText()))
                 {
                     <li class="list-group-item">
-                        @using (Html.BeginForm("RefreshAll", "WorkflowJob", new {id = Model.DdsIdentifier}, FormMethod.Post))
+                        @using (Html.BeginForm("RefreshAll", "WorkflowJob", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe}, FormMethod.Post))
                         {
                             <button type="submit" class="btn btn-link" title="Refresh All Resources">
                                 <span class="glyphicon glyphicon-refresh"></span> Rebuild All
@@ -453,7 +460,7 @@
                             }
                         </li>
                         <li class="list-group-item">
-                            <a href="@Url.Action("DeletePdf", "Dash", new {id = Model.DdsIdentifier})" class="btn btn-warning"><span class="glyphicon glyphicon-file"></span> Delete PDF</a>
+                            <a href="@Url.Action("DeletePdf", "Dash", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})" class="btn btn-warning"><span class="glyphicon glyphicon-file"></span> Delete PDF</a>
                         </li>
                     </ul>
                 </div>
@@ -556,7 +563,7 @@
                             <td>
                                 @if (@pf.RelativeAltoPath.HasText())
                                 {                                    
-                                    <a href="@Url.ActionWithPath("XmlView", "Peek", new {id = Model.DdsIdentifier.PackageIdentifier},  pf.RelativeAltoPath)"
+                                    <a href="@Url.ActionWithPath("XmlView", "Peek", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe},  pf.RelativeAltoPath)"
                                        title="@pf.RelativeAltoPath"><span class="label label-primary">ALTO</span></a>
                                 }
                             </td>
@@ -662,7 +669,7 @@
                 (e.g., the METS structure has been rearranged across manifestations and not yet synchronised for all manifestations).
                 However, they might also represent images that have been replaced in Preservica but not deleted from the DLCS.
             </p>
-            <p><a href="@Url.Action("DeleteOrphans", "Dash", new {id = Model.DdsIdentifier})" class="btn btn-info"><span class="glyphicon glyphicon-trash"></span> Delete Orphans</a></p>
+            <p><a href="@Url.Action("DeleteOrphans", "Dash", new {id = Model.DdsIdentifier.PackageIdentifierPathElementSafe})" class="btn btn-info"><span class="glyphicon glyphicon-trash"></span> Delete Orphans</a></p>
             <table class="table table-hover table-condensed">
                 <thead>
                     <tr>
